# consulting

./: .gitignore  README.md  pyproject.toml
docs/: index.md
notebooks/: enpp1_clinvar_explore.ipynb
projects/: README.md
projects/1p618/: 20250318_glucose_visualization_and_analysis.ipynb  README.md
projects/cv/: Makefile  README.md  config.yaml  cv_template.md  cv_template.tex  install.sh
projects/cyp-enzyme-vep/: README.md
projects/cyp-enzyme-vep/src/: data.py
projects/enpp1-vep/src/: data.py  features.py  models.py  visualization.py
projects/flyte/: hello.py
projects/flyte/v1/: README.md
projects/flyte/v2/: README.md  hello.py
projects/gatk_pipeline_app/: README.md  home_view.dart  log_panel.dart  main.dart  pipeline.dart  pubspec.yaml
projects/gatk_pipeline_app/lib/: theme.dart
projects/gatk_pipeline_app/lib/bindings/: app_binding.dart
projects/mcp-explore/hello/: pyproject.toml  server.py
projects/misc/: infiinity_investing.py  submit_to_jupyter.ipynb
projects/open-cravat/: README.md
projects/table_extraction/: docling-example.py  main.py  openai-asyncio.py  pdf-extract-table.py  pdf-plumber.py  pdf_page_to_image.py  split_pdfs.py
src/: hello_world.py  hello_world_2.py
src/consulting/: __init__.py  analysis.py  config.py  data.py  designer.py  plot.py  utils.py
src/examples/: simple_example.py
src/tasks/: clinical_trials.py  ensembl_api.py  shell_task.py
website/: .gitignore  docusaurus.config.ts  package-lock.json  package.json
website/src/pages/: jupyter-lite-page.js  my-react-page.js
(+6 files in other folders)
